@@ -52,39 +52,75 @@ const enableStripeLinkPaymentMethod = ( options ) => {
 			  };
 
 		if ( options.complete_shipping() ) {
+			const shippingNames = shippingAddress.name.split( / (.*)/s, 2 );
+			shippingAddress.address.last_name = shippingNames[ 1 ];
+			shippingAddress.address.first_name = shippingNames[ 0 ];
+
 			fillWith( shippingAddress, options.shipping_fields.line1, 'line1' );
 			fillWith( shippingAddress, options.shipping_fields.line2, 'line2' );
 			fillWith( shippingAddress, options.shipping_fields.city, 'city' );
+			fillWith(
+				shippingAddress,
+				options.shipping_fields.country,
+				'country'
+			);
+			fillWith(
+				shippingAddress,
+				options.shipping_fields.first_name,
+				'first_name'
+			);
+			fillWith(
+				shippingAddress,
+				options.shipping_fields.last_name,
+				'last_name'
+			);
+			jQuery(
+				'#billing_country, #billing_state, #shipping_country, #shipping_state'
+			).trigger( 'change' );
 			fillWith( shippingAddress, options.shipping_fields.state, 'state' );
 			fillWith(
 				shippingAddress,
 				options.shipping_fields.postal_code,
 				'postal_code'
 			);
-			fillWith(
-				shippingAddress,
-				options.shipping_fields.country,
-				'country'
-			);
 		}
 
 		if ( options.complete_billing() ) {
+			const billingNames = billingAddress.name.split( / (.*)/s, 2 );
+			billingAddress.address.last_name = billingNames[ 1 ];
+			billingAddress.address.first_name = billingNames[ 0 ];
+
 			fillWith( billingAddress, options.billing_fields.line1, 'line1' );
 			fillWith( billingAddress, options.billing_fields.line2, 'line2' );
 			fillWith( billingAddress, options.billing_fields.city, 'city' );
+			fillWith(
+				billingAddress,
+				options.billing_fields.country,
+				'country'
+			);
+			fillWith(
+				billingAddress,
+				options.billing_fields.first_name,
+				'first_name'
+			);
+			fillWith(
+				billingAddress,
+				options.billing_fields.last_name,
+				'last_name'
+			);
+			jQuery(
+				'#billing_country, #billing_state, #shipping_country, #shipping_state'
+			).trigger( 'change' );
 			fillWith( billingAddress, options.billing_fields.state, 'state' );
 			fillWith(
 				billingAddress,
 				options.billing_fields.postal_code,
 				'postal_code'
 			);
-			fillWith(
-				billingAddress,
-				options.billing_fields.country,
-				'country'
-			);
 		}
-		jQuery( 'select' ).trigger( 'change' );
+		jQuery(
+			'#billing_country, #billing_state, #shipping_country, #shipping_state'
+		).trigger( 'change' );
 	} );
 };
 
